--- a/prob1_2025/basic.html
+++ b/prob1_2025/basic.html
@@ -106,8 +106,13 @@ body,table {
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -143,8 +148,8 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
+<h3/>
 <ul>
 <li>
 <a href="#Basic concepts">Basic concepts</a>
@@ -185,7 +190,7 @@ function myFunction() {
 </ul>
 <hr/>
 $\newcommand{\ev}{{\mathcal F}}$
-<h1><a
+<h1 xmlns=""><a
 name="Basic concepts">Basic concepts</a></h1>
 A <b>random experiment</b> is an activity whose outcome we cannot
 predict. The set of all outcomes is called its <b>sample space</b>. Each
@@ -612,7 +617,7 @@ $A_{\{1,2\}} = A_1\cap A_2$  and so on. So the second term (for $k=2$) becomes
 $$-[P(A_1\cap A_2)+P(A_2\cap A_3)+P(A_1\cap A_3)].$$ 
  The third term (for $k=3$) similarly is 
 $P(A_1\cap A_2\cap A_3).$  So the entire sum looks like 
-$$P(A_1\cup A_2\cup A_3) = [P(A_1)+P(A_2)+P(A_3)]-[P(A_1\cap A_2)+P(A_2\cap A_3)+P(A_1\cap A_3)]+P(A_1\cap A_2\cap A_3).$$
+$$P(A_1\cup A_2\cup A_3) = [P(A_1)+P(A_2)+P(A_3)][P(A_1\cap A_2)+P(A_2\cap A_3)+P(A_1\cap A_3)]+P(A_1\cap A_2\cap A_3).$$
  The Venn diagram shows why this formula is correct. But a Venn diagram cannot be 
 considered as a proof, as it shows only one possible case. However, a Venn diagram does indicate 
 how to construct a general proof.
@@ -1112,7 +1117,7 @@ the event that of $E,F,G$
 </ol>
 
 <p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
 class="ans" id="lab1">
 <ol type="">
 <li>$E^c\cap F\cap G^c.$</li>
@@ -1147,7 +1152,7 @@ F^c\cap G).$</li>
 <p>
 <b>EXERCISE 7:</b>&nbsp;Show that $E\cap (F\cup G) = (E\cap F)\cup (E\cap
 G).$<p><a
-href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
 class="ans" id="lab2">Let $x\in E\cap (F\cup G).$ To show $x\in (E\cap
 F)$ or $x\in (E\cap G).$
 <p></p>
@@ -1178,7 +1183,7 @@ Hence $x\in (E\cap F\cup G),$ as required.
 
 <p>
 <b>EXERCISE 8:</b>&nbsp;Show that $(A\cup B)^c = A^c \cap B^c.$<p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
 class="ans" id="lab3">Let $x\in (A\cup B)^c.$ Shall show $x\in A^c\cup
 B^c$, <i>i.e.</i>, $x\not\in A$ and $x\not\in B.$
 <p></p>
@@ -1212,7 +1217,7 @@ correct/incorrect:
 </ol>
 
 <p><a
-href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
 class="ans" id="lab4"><ol type="">
 
 <li>False: Venn diagram for the lhs is
@@ -1282,7 +1287,7 @@ name="Axioms">Axioms</a></h3>
 functions $P_i:\Omega\rightarrow{\mathbb R}$ for $i=1,2,3$ such
 that $P_i$ violates axiom $i$, but satisfies the other
 two.<p><a
-href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
 class="ans" id="lab5">Here is $P_1:$
 $P_1(\phi)=0$,
 $P_1(\{0\})=-1$,
@@ -1321,7 +1326,7 @@ B)\geq 0.7.$ In general, show that $P(A\cap B)\geq
 P(A)+P(B)-1.$ This is known as Bonferroni's
 inequality.
 <p><a
-href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
 class="ans" id="lab6">$P(A\cup B) \leq 1.$ Hence $P(A)+P(B)-P(A\cap B)\leq
 1.$ So $P(A)+P(B)-1\geq P(A\cap B).$ Hence $P(A\cap B)\geq 0.9+0.8-1 = 0.7.$</div></p>
 </p>
@@ -1334,7 +1339,7 @@ $$
 P\left( \cup_1^n A_i\right) \leq \sum_1^n P(A_i).
 $$
 <p><a
-href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
 class="ans" id="lab7">(Induction on $n$) If $n=1,$ then both sides are
 the same. 
 <p></p>
@@ -1369,7 +1374,7 @@ is the probability that (a) the first selected digit is odd?
 (b) the second selected digit is odd? (c) both are odd? (d) at
 least one is odd?
 <p><a
-href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab8')"><b>[Hint]</b></a><div
 class="ans" id="lab8">There are $5\times4$ possible outcomes. (a)
 Exactly $3\times4$ outcomes have the first digit odd. So the
 probability is $\frac 35.$ (b) 
@@ -1387,7 +1392,7 @@ required probability is $\frac 35+\frac 35-\frac{3}{10} = \frac{9}{10}.$
 <b>EXERCISE 14:</b>&nbsp;A fair coin is tossed 6 times. What is the probability that
 the first head occurs (a) at the third toss? (b) not before the
 third toss?<p><a
-href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
 class="ans" id="lab9">Total number of outcomes is $2^6.$ All are equally
 likely. (a) Number of favorable outcomes is $2^3.$ So the
 probability is $2^{-3}.$ (b) Similarly, the probability that
@@ -1402,7 +1407,7 @@ So the required probability is $1-2^{-5}-2^{-4}.$
 <b>EXERCISE 15:</b>&nbsp;10 distinct balls are dropped randomly in 3 distinct
 boxes. What is the probability that none of the boxes remain
 empty?<p><a
-href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
 class="ans" id="lab10">Each ball can drop in any box. So $3^{10}$ outcomes in
 all. All equally likely. The probability that box $i$ is empty
 is $\left(\frac 23\right)^{10}$  for $i=1,2,3.$ The probability that
@@ -1422,7 +1427,7 @@ the last 0 is because all the boxes cannot remain empty.
 <p>
 <b>EXERCISE 16:</b>&nbsp;Two fair dice are tossed, what is the probability that the
 sum is $i$ for $i=2,3,...,12?$<p><a
-href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
 class="ans" id="lab11"><center>
 <table style="" border="1">
 
@@ -1486,7 +1491,7 @@ outcomes</th><th colspan="" rowspan="">Probability</th>
 <b>EXERCISE 17:</b>&nbsp;Two cards are randomly selected from a deck of 52 playing
 cards. What is the probability that they are of the same
 denomination?<p><a
-href="javascript:hideShow('lab12')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
 class="ans" id="lab12">Total number of outcomes is $52\times51.$ All equally
 likely. To compute number of favorable outcomes: pick the first
 card (52 ways), pick the second card with same denomination (3
@@ -1503,7 +1508,7 @@ some (or all or none) of the light bulbs may go out (all possibilities
 being equally likely). What is the chance that after a
 lightning  at least two consecutive light bulbs are still
 shining.<p><a
-href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
 class="ans" id="lab13">Each light may be either on or off (not both). So total
 number of outcomes is $2^{10}.$ To count number of
 favourable outcomes we start by counting the complement. If no
@@ -1522,7 +1527,7 @@ $N_i = {11-i\choose i}$. So the required probability is $1-\frac{N_0+\cdots+N_5}
 envelopes. If the letters are placed randomly in the envelopes,
 then find the probability that exactly $k$ letters are in their correct
 envelopes for $k=1,2,3,4.$ <p><a
-href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
 class="ans" id="lab14">Let $p_k = $ probability that exactly $k$ letters
 are in their correct envelopes. Then $p_4 = \frac{1}{4!}.$
 Also $p_3 = 0,$ since if 3 letters are in their correct
@@ -1545,7 +1550,7 @@ need a cyclic permutation. Since there are only 2 such, $p_1 =
 <b>EXERCISE 20:</b>&nbsp;The numbers $1,2,...,n$ are arranged in random
 order. Find the probability that the digits $1,2,3$ appear
 as neighbours in this order.<p><a
-href="javascript:hideShow('lab15')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
 class="ans" id="lab15">Treat $1,2,3$ as a
 bunch. So the probability is $\frac{3!\times(n-2)!}{n!} =
 \frac{6}{n(n-1)}.$</div></p>
@@ -1557,7 +1562,7 @@ bunch. So the probability is $\frac{3!\times(n-2)!}{n!} =
 <b>EXERCISE 21:</b>&nbsp;$A$ throws six dice and wins if he scores at least one
 ace. $B$ throws twelve dice and wins if he scores at least
 two aces. Who has the greater probability to win?<p><a
-href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab16')"><b>[Hint]</b></a><div
 class="ans" id="lab16">
 $P(A) = 1-\frac{5^6}{6^6} = 0.67.$ 
 <p></p>
@@ -1578,7 +1583,7 @@ $P(A) &gt; P(B).$</div></p>
 <b>EXERCISE 22:</b>&nbsp;Find the probability that among three random digits there
 appear exactly 1,2 or 3 different digits. Also do the same for
 four random digits.<p><a
-href="javascript:hideShow('lab17')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
 class="ans" id="lab17">Let $p_k = $ the probability that there are
 exactly $k$ different digits among 3 random digits. Total
 number of outcomes is $10^3.$ For $k=1,$ the number of
@@ -1603,7 +1608,7 @@ also. But now $q_3\neq 1-q_1-q_2.$</div></p>
 <p>
 <b>EXERCISE 23:</b>&nbsp;Find, for $r=1,2,3,...$, the probability $p_r$ that in a sample of $r$
 random digits no two are equal.<p><a
-href="javascript:hideShow('lab18')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab18')"><b>[Hint]</b></a><div
 class="ans" id="lab18">Clearly, $p_1 = 1$ and $p_r = 0$ for $r&gt;10.$
 For $r\in\{2,...,9\},$ the total number of outcomes
 is $10^r$ and number of favourable outcomes
@@ -1616,7 +1621,7 @@ is $(10)_r.$ So $p_r = \frac{(10)_r}{10^r}.$</div></p>
 <b>EXERCISE 24:</b>&nbsp;If $n$ balls are placed at random among $n$ cells,
 find the probability that exactly one cell remains
 empty.<p><a
-href="javascript:hideShow('lab19')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab19')"><b>[Hint]</b></a><div
 class="ans" id="lab19">Let $p = $ the probability that only the first cell
 remains empty.
 The final answer would be $np.$ Now, for $k=2,...,n,$ let $A_k = $ the
@@ -1655,7 +1660,7 @@ $$</div></p>
 door. He tries them successively using SRSWOR until he finds the
 right key. Show that the probability that he will try $k$
 keys is $\frac 1n$ for $k=1,...,n.$<p><a
-href="javascript:hideShow('lab20')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
 class="ans" id="lab20">The probability that he tries $k$ keys is the
 probability that he picks wrong keys the first $k-1$ times,
 and then picks the right key. The total number of outcomes
@@ -1675,7 +1680,7 @@ and one short part. The resulting $2n$ pieces are combined
 pairwise in a random fashion. What is the probability that the
 original pairings are restored? What is the probability that each
 long piece gets a short partner?<p><a
-href="javascript:hideShow('lab21')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab21')"><b>[Hint]</b></a><div
 class="ans" id="lab21">
 Let the long pieces be $A_1,...,A_n$ and the
 corresponding short pieces be $A_{n+1},...,A_{2n}.$ Then the total
@@ -1701,7 +1706,7 @@ is $n!.$ So the probability is $\frac{2^n (n!)^2}{(2n)!} = \frac{2^n}{{2n\choose
 <b>EXERCISE 27:</b>&nbsp;A box contains 90 good and 10 defective screws. If 10 screws
 are selected at random (SRSWOR), then find the probability that
 none of these are defective.<p><a
-href="javascript:hideShow('lab22')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab22')"><b>[Hint]</b></a><div
 class="ans" id="lab22">
 Total number of outcomes is ${100\choose 10}.$ Number of
 favourable outcomes is ${90\choose 10}.$ So the required prob
@@ -1715,7 +1720,7 @@ is $\frac{90\times\cdots\times81}{100\times\cdots\times91}.$
 <b>EXERCISE 28:</b>&nbsp;From the set $\{a,b,c,d,e\}$ we draw an SRSWR of size
 25. What is the probability that the sample will have 5
 occurrences of each of the letters?<p><a
-href="javascript:hideShow('lab23')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab23')"><b>[Hint]</b></a><div
 class="ans" id="lab23">
 Total number of possible outcomes is $5^{25}$, all
 equally likely. The
@@ -1729,7 +1734,7 @@ is $\frac{25!}{5!5!5!5!5!}.$</div></p>
 <b>EXERCISE 29:</b>&nbsp;If $n$ men (including $A$ and $B$) stand in a
 row in random order, what is the probability that there will be
 exactly $r$ men between $A$ and $B?$<p><a
-href="javascript:hideShow('lab24')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab24')"><b>[Hint]</b></a><div
 class="ans" id="lab24">
 Total number of possible outcomes is $n!.$ To find
 total number of favourable outcomes make the other $n-2$
@@ -1749,7 +1754,7 @@ will show the same configuration if (a) the dice are distinct
 (<i>e.g.</i>, $(2,3,6)$ is not the same as $(3,2,6)$).
 (b) the dice are identical (<i>e.g.</i>, $\{2,3,6\}$ is the same
 as $\{3,2,6\}$)?<p><a
-href="javascript:hideShow('lab25')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab25')"><b>[Hint]</b></a><div
 class="ans" id="lab25">Distinct dice case: Total number of outcomes is $6^6,$
 all equally likely. Number of favourable outcomes is $6^3$
 (only free to choose the results of the first throw). So
@@ -1786,7 +1791,7 @@ mean(res)
 person is equally likely to be born in any day of the year (1
 year=365 days), find the probability that at least two persons
 share the same birthday. <p><a
-href="javascript:hideShow('lab26')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab26')"><b>[Hint]</b></a><div
 class="ans" id="lab26">Total number of outcomes is $365^n.$ The number of
 outcomes where no two share the same birthday
 is $(365)_n.$ So the required probability is 
@@ -1810,7 +1815,7 @@ rumour spreads $r$ times without returning to $p_1.$
 Also, find the probability that the rumour spreads $r$ times
 without being repeated to any person.
  <p><a
-href="javascript:hideShow('lab27')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab27')"><b>[Hint]</b></a><div
 class="ans" id="lab27">Total number of outcomes is $n^r.$ In the first part
 the total number of favourable outcomes is $n(n-1)^{r-1}.$ So
 the probability is $\left(1-\frac 1n\right)^{r-1}.$ In the second
@@ -1833,7 +1838,7 @@ is $n(n-1)(n-2)\cdots(n-r+1).$ So the probability is
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab28')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab28')"><b>[Hint]</b></a><div
 class="ans" id="lab28">Let the drawer have $r$ red and $b$ black
 socks. Then we have
 <p></p>
@@ -1860,7 +1865,7 @@ even $b$ it is $r=15,$ $b=6.$</div></p>
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab29')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab29')"><b>[Hint]</b></a><div
 class="ans" id="lab29">$\frac{13!}{52!}\approx 10^{-60}.$
 </div></p>
 </p>
@@ -1879,7 +1884,7 @@ class="ans" id="lab29">$\frac{13!}{52!}\approx 10^{-60}.$
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab30')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab30')"><b>[Hint]</b></a><div
 class="ans" id="lab30">First experiment:$1-(\frac 56)^6\approx 0.67.$
 <p></p>
 Second experiment:$1-\left(\frac 56\right)^{12} -
@@ -1905,7 +1910,7 @@ Third experiment:$1-\left(\frac 56\right)^{18} -
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab31')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab31')"><b>[Hint]</b></a><div
 class="ans" id="lab31">(a) $\left(1-\frac{1}{100}\right)^{100}\approx \frac 1e\approx
 0.37.$
 <p></p>
@@ -1926,7 +1931,7 @@ class="ans" id="lab31">(a) $\left(1-\frac{1}{100}\right)^{100}\approx \frac 1e\a
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab32')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab32')"><b>[Hint]</b></a><div
 class="ans" id="lab32">${n\choose r}\left(\frac mn\right)^r\left(1-\frac mn\right)^{n-r}.$</div></p>
 </p>
 
@@ -1942,7 +1947,7 @@ class="ans" id="lab32">${n\choose r}\left(\frac mn\right)^r\left(1-\frac mn\righ
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab33')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab33')"><b>[Hint]</b></a><div
 class="ans" id="lab33">$1-\frac{(365)_n}{365^n}&gt;\frac 12.$ Here are some values:
 <center>
 <table style="" border="1">
@@ -1975,7 +1980,7 @@ The answer is 23.
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab34')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab34')"><b>[Hint]</b></a><div
 class="ans" id="lab34">If I ask $n$ persons, then the probability
 is $1-\left(\frac{364}{365}\right)^n.$ I want this to
 be $&gt;\frac 12.$
@@ -1993,7 +1998,7 @@ events $A_1,A_2,A_3$ has occurred. Generalise to $n$
 events. Also find (and prove) a formula (in terms of
 the $p_i$'s) for the probability that exactly $r$ of
 the $n$ events has occurred.<p><a
-href="javascript:hideShow('lab35')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab35')"><b>[Hint]</b></a><div
 class="ans" id="lab35">Probability that exactly one event of $A_1,A_2,A_3$ has
 occurred is $p_1-2p_2+3p_3.$ For $n$ events it will be 
 $\sum_{i=1}^n (-1)^{i-1} ip_i.$ For exactly $r$ out
@@ -2007,31 +2012,7 @@ $$
 
 <p></p>
 
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-this.page.url = "https://arnabc74.github.io/prob1_2024/basic.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "basic"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
