--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -106,8 +106,13 @@ body,table {
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -143,8 +148,8 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
+<h3/>
 <ul>
 <li>
 <a href="#Conditional distribution">Conditional distribution</a>
@@ -164,7 +169,8 @@ function myFunction() {
 </ul>
 <hr/>
 
-<h1><a
+
+<h1 xmlns=""><a
 name="Conditional distribution">Conditional distribution</a></h1>
 
 <fieldset>
@@ -430,11 +436,11 @@ name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
 ::<p>
-<b>EXERCISE 1:</b>&nbsp;<img width="" src="image/condist1.png" style="vertical-align:text-top;">
+<b>EXERCISE 1:</b>&nbsp;<font size="-2">[condist1.png]</font><img width="" src="image/condist1.png" style="vertical-align:text-top;">
 <p></p>
 Here the word "density" is used to mean "PMF". 
 <p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
 class="ans" id="lab1">
 (a) Once you realise that $f_X(x) = P(X=x)$, $f_Y(y) = P(Y=y)$  and 
 $f_{Y|X}(y|x) = P(Y=y|X=x),$  the given equality is just theorem of total probability. 
@@ -445,9 +451,9 @@ $f_{Y|X}(y|x) = P(Y=y|X=x),$  the given equality is just theorem of total probab
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;<img width="" src="image/condist2.png" style="vertical-align:text-top;">
+<b>EXERCISE 2:</b>&nbsp;<font size="-2">[condist2.png]</font><img width="" src="image/condist2.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
 class="ans" id="lab2">
 $E(S_N) = E(E(S_N|N)) = E(N\mu) = \mu E(N).$
 <p></p>
@@ -459,9 +465,9 @@ The third equality follows directly from these two.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 3:</b>&nbsp;<img width="" src="image/condist3.png" style="vertical-align:text-top;">
+<b>EXERCISE 3:</b>&nbsp;<font size="-2">[condist3.png]</font><img width="" src="image/condist3.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
 class="ans" id="lab3">
 (a) $\frac 23.$
 <p></p>
@@ -473,11 +479,11 @@ class="ans" id="lab3">
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 4:</b>&nbsp;<img width="" src="image/condist4.png" style="vertical-align:text-top;">
+<b>EXERCISE 4:</b>&nbsp;<font size="-2">[condist4.png]</font><img width="" src="image/condist4.png" style="vertical-align:text-top;">
 <p></p>
 You might like to solve (b) first.
 <p><a
-href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
 class="ans" id="lab4">
 (b) $P(X=Y) = \frac 1N.$
 <p></p>
@@ -491,13 +497,13 @@ So $P(X\geq Y) = \frac 49+\frac 19=\frac 59.$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;<img width="" src="image/condist5.png" style="vertical-align:text-top;">
+<b>EXERCISE 5:</b>&nbsp;<font size="-2">[condist5.png]</font><img width="" src="image/condist5.png" style="vertical-align:text-top;">
 <p></p>
 Here Exercise 14 means the last exercise (<i>i.e.</i>, Exercise 4 according to our numbering).
 <hr>
 
 <p><a
-href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
 class="ans" id="lab5">
 (a) Let $U = \min(X,Y).$   Then $U$  can take values $0,...,N.$  
 <p></p>
@@ -538,9 +544,9 @@ Hence $P(R=k) = \frac{2(N-k+1)}{N}.$
 
 </p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;<img width="" src="image/condist6.png" style="vertical-align:text-top;">
+<b>EXERCISE 6:</b>&nbsp;<font size="-2">[condist6.png]</font><img width="" src="image/condist6.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
 class="ans" id="lab6">
 (a) $P(X=x) = \sum_y P(X=x,Y=y) = \sum_y g(x)h(y) = g(x)\sum_y h(y).$
 <p></p>
@@ -558,10 +564,10 @@ Then $P(X=x)P(Y=y) = \big[\sum_y h(y) \big]g(x)\big[\sum_x g(x) \big]h(y) = g(x)
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;<img width="" src="image/condist7.png" style="vertical-align:text-top;">
+<b>EXERCISE 7:</b>&nbsp;<font size="-2">[condist7.png]</font><img width="" src="image/condist7.png" style="vertical-align:text-top;">
 Here "density" means "PMF". 
 <p><a
-href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
 class="ans" id="lab7">
 (a) $(X_1,...,X_r)$  can take values $(x_1,...,x_r)$  where each $x_i$  is a nonnegative integer and $\sum_1^r x_i = 2r.$ 
 <p></p>
@@ -584,9 +590,9 @@ $P\{(X_1,...,X_r) = (x_1,...,x_r)\}= \frac{ |A| }{ |\Omega| }.$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;<img width="" src="image/condist8.png" style="vertical-align:text-top;">
+<b>EXERCISE 8:</b>&nbsp;<font size="-2">[condist8.png]</font><img width="" src="image/condist8.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab8')"><b>[Hint]</b></a><div
 class="ans" id="lab8">
 (a) $P(X_1+X_2=k) = \binom{n}{k} (p_1+p_2)^k p_3^{n-k}$  for $k=0,1,...,n.$
 <p></p>
@@ -603,9 +609,9 @@ P(X_2=y|X_1+X_2 = z)
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 9:</b>&nbsp;<img width="" src="image/condist9.png" style="vertical-align:text-top;">
+<b>EXERCISE 9:</b>&nbsp;<font size="-2">[condist9.png]</font><img width="" src="image/condist9.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
 class="ans" id="lab9">
 (a) $1-\left(\frac{5}{6}\right)^6.$
 <p></p>
@@ -619,11 +625,11 @@ Direct computation shows $n\geq 4.$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 10:</b>&nbsp;<img width="" src="image/condist10.png" style="vertical-align:text-top;">
+<b>EXERCISE 10:</b>&nbsp;<font size="-2">[condist10.png]</font><img width="" src="image/condist10.png" style="vertical-align:text-top;">
 <p></p>
 Imagine this set up: A coin with $P(H)=p$  is repeadly tossed. Success means $H.$
 <p><a
-href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
 class="ans" id="lab10">
 $(1-p)^{x_r-r} p^r.$
 <p></p>
@@ -635,11 +641,11 @@ Thanks to Amit Prakash Jena for correcting a mistake here.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;<img width="" src="image/condist11.png" style="vertical-align:text-top;">
+<b>EXERCISE 11:</b>&nbsp;<font size="-2">[condist11.png]</font><img width="" src="image/condist11.png" style="vertical-align:text-top;">
 <p></p>
 This is a continuation of the last problem.
 <p><a
-href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
 class="ans" id="lab11">
 $P(T_1=x|N_n=1) = \frac{P(T_1=x\&amp; N_n=1)}{P(N_n=1)} = \frac{p(1-p)^{n-1}}{np(1-p)^{n-1}}] = \frac 1n.$
 </div></p>
@@ -647,20 +653,20 @@ $P(T_1=x|N_n=1) = \frac{P(T_1=x\&amp; N_n=1)}{P(N_n=1)} = \frac{p(1-p)^{n-1}}{np
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;<img width="" src="image/condist12.png" style="vertical-align:text-top;">
+<b>EXERCISE 12:</b>&nbsp;<font size="-2">[condist12.png]</font><img width="" src="image/condist12.png" style="vertical-align:text-top;">
 <p></p>
 This is a continuation of the last problem.
 <p><a
-href="javascript:hideShow('lab12')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
 class="ans" id="lab12">
 Same logic as in the last solution.
 </div></p>
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;<img width="" src="image/morecond1.png" style="vertical-align:text-top;">
+<b>EXERCISE 13:</b>&nbsp;<font size="-2">[morecond1.png]</font><img width="" src="image/morecond1.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
 class="ans" id="lab13">
 By symmetry, the answer is $\frac 1n$  if $k=1.$  So, for general $k$  the answer is $\frac kn.$
 </div></p>
@@ -668,9 +674,9 @@ By symmetry, the answer is $\frac 1n$  if $k=1.$  So, for general $k$  the answe
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;<img width="" src="image/morecond2.png" style="vertical-align:text-top;">
+<b>EXERCISE 14:</b>&nbsp;<font size="-2">[morecond2.png]</font><img width="" src="image/morecond2.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
 class="ans" id="lab14">Let $I_j$ be the indicator variable for whether there is a
 record at position $j.$ Then $P(I_j=1)$ may be computed
 by total probability:
@@ -682,18 +688,18 @@ Similarly for $P(I_jI_k=1).$</div></p>
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 15:</b>&nbsp;<img width="" src="image/morecond3.png" style="vertical-align:text-top;">
+<b>EXERCISE 15:</b>&nbsp;<font size="-2">[morecond3.png]</font><img width="" src="image/morecond3.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab15')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
 class="ans" id="lab15">The problem is basically optimising $\sum P_i^2$ subject
 to $\sum P_i$ being fixed. Cauchy-Scwartz might help.  </div></p>
 
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 16:</b>&nbsp;<img width="" src="image/morecond4.png" style="vertical-align:text-top;">
+<b>EXERCISE 16:</b>&nbsp;<font size="-2">[morecond4.png]</font><img width="" src="image/morecond4.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab16')"><b>[Hint]</b></a><div
 class="ans" id="lab16">
 Let the black balls be labelled $b_1,...,b_m.$  
 <p></p>
@@ -739,9 +745,9 @@ In general, we see that $Y_i$'s are all identically distributed. Now (b) follows
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;<img width="" src="image/morecond5.png" style="vertical-align:text-top;">
+<b>EXERCISE 17:</b>&nbsp;<font size="-2">[morecond5.png]</font><img width="" src="image/morecond5.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab17')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
 class="ans" id="lab17">
 Let $T = \lambda X_1+ (1-\lambda) X_2.$  
 <p></p>
@@ -759,9 +765,9 @@ This is desirable because we are giving more weight to the $X_i$  that has less 
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;<img width="" src="image/morecond6.png" style="vertical-align:text-top;">
+<b>EXERCISE 18:</b>&nbsp;<font size="-2">[morecond6.png]</font><img width="" src="image/morecond6.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab18')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab18')"><b>[Hint]</b></a><div
 class="ans" id="lab18">
 Just like $(a+b)(a-b) = a^2-b^2.$  
 </div></p>
@@ -769,11 +775,11 @@ Just like $(a+b)(a-b) = a^2-b^2.$
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;<img width="" src="image/morecond7.png" style="vertical-align:text-top;">
+<b>EXERCISE 19:</b>&nbsp;<font size="-2">[morecond7.png]</font><img width="" src="image/morecond7.png" style="vertical-align:text-top;">
 <p></p>
 Do this only for discrete $X.$
 <p><a
-href="javascript:hideShow('lab19')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab19')"><b>[Hint]</b></a><div
 class="ans" id="lab19">
 $E(X|Y=y) = \sum_x x P(X=x|Y=y) = \sum_x x P(X=x),$
 since $X,Y$  independent. 
@@ -784,14 +790,14 @@ Hence the result.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;<img width="" src="image/morecond8.png" style="vertical-align:text-top;">
+<b>EXERCISE 20:</b>&nbsp;<font size="-2">[morecond8.png]</font><img width="" src="image/morecond8.png" style="vertical-align:text-top;">
 <p></p>
 Do this for discrete $X, Y$  only. If $X$  can take values $x_1,x_2,x_3,...$  with
  positive probabilities, then
  you are prove
 $$\forall i~~E(g(X)Y|X=x_i] = g(x_i)E(Y|X=x_i).$$
 <p><a
-href="javascript:hideShow('lab20')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
 class="ans" id="lab20">
 Take any $i.$
 <p></p>
@@ -801,17 +807,17 @@ Then $E(g(X)Y|X=x_i) = \sum_y g(x_i) y P(Y=y|X=x_i) = g(x_i) \sum_y y P(Y=y|X=x_
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;<img width="" src="image/morecond9.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 21:</b>&nbsp;<font size="-2">[morecond9.png]</font><img width="" src="image/morecond9.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;<img width="" src="image/morecond10.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 22:</b>&nbsp;<font size="-2">[morecond10.png]</font><img width="" src="image/morecond10.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 23:</b>&nbsp;<img width="" src="image/morecond11.png" style="vertical-align:text-top;">
+<b>EXERCISE 23:</b>&nbsp;<font size="-2">[morecond11.png]</font><img width="" src="image/morecond11.png" style="vertical-align:text-top;">
 <p></p>
 Will the result hold in general if the $X_i$'s are not independent?
 <p><a
-href="javascript:hideShow('lab21')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab21')"><b>[Hint]</b></a><div
 class="ans" id="lab21">No, the result may not hold if the $X_i$'s have a dependence structure that is
  asymetric. A counterexample is as follows. 
 <p></p>
@@ -822,38 +828,38 @@ $X_1 = $  outcome of a roll of a fair die. $X_2$  is obtained from $X_1$  by
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 24:</b>&nbsp;<img width="" src="image/morecond12.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 24:</b>&nbsp;<font size="-2">[morecond12.png]</font><img width="" src="image/morecond12.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 25:</b>&nbsp;<img width="" src="image/morecond13.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 25:</b>&nbsp;<font size="-2">[morecond13.png]</font><img width="" src="image/morecond13.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 26:</b>&nbsp;<img width="" src="image/morecond14.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 26:</b>&nbsp;<font size="-2">[morecond14.png]</font><img width="" src="image/morecond14.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 27:</b>&nbsp;<img width="" src="image/morecond15.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 27:</b>&nbsp;<font size="-2">[morecond15.png]</font><img width="" src="image/morecond15.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 28:</b>&nbsp;<img width="" src="image/morecond16.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 28:</b>&nbsp;<font size="-2">[morecond16.png]</font><img width="" src="image/morecond16.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 29:</b>&nbsp;<img width="" src="image/morecond17.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 29:</b>&nbsp;<font size="-2">[morecond17.png]</font><img width="" src="image/morecond17.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 30:</b>&nbsp;<img width="" src="image/morecond18.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 30:</b>&nbsp;<font size="-2">[morecond18.png]</font><img width="" src="image/morecond18.png" style="vertical-align:text-top;"><hr>
 </p>
 
 <p></p>
 ::<p>
-<b>EXERCISE 31:</b>&nbsp;<img width="" src="image/morecond19.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 31:</b>&nbsp;<font size="-2">[morecond19.png]</font><img width="" src="image/morecond19.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 32:</b>&nbsp;<img width="" src="image/morecond20.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 32:</b>&nbsp;<font size="-2">[morecond20.png]</font><img width="" src="image/morecond20.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 33:</b>&nbsp;<img width="" src="image/morecond21.png" style="vertical-align:text-top;">
+<b>EXERCISE 33:</b>&nbsp;<font size="-2">[morecond21.png]</font><img width="" src="image/morecond21.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab22')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab22')"><b>[Hint]</b></a><div
 class="ans" id="lab22">
 Let $X_i$  be the indicator for $i$-th red ball being a win. 
 <p></p>
@@ -881,9 +887,9 @@ Now you should be able to complete the rest.
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 34:</b>&nbsp;<img width="" src="image/morecond22.png" style="vertical-align:text-top;">
+<b>EXERCISE 34:</b>&nbsp;<font size="-2">[morecond22.png]</font><img width="" src="image/morecond22.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab23')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab23')"><b>[Hint]</b></a><div
 class="ans" id="lab23">
 (a) Let's take an example with $n=10$  and $k=3.$  We are showing the selected balls in red:
 <blockquote>
@@ -897,7 +903,7 @@ You should be able to see directly that in general $X+R=n.$
 <hr>
 </p>
 
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
