--- a/prob1_2025/indep.html
+++ b/prob1_2025/indep.html
@@ -106,8 +106,13 @@ body,table {
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -143,8 +148,8 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
+<h3/>
 <ul>
 <li>
 <a href="#Independence">Independence</a>
@@ -167,7 +172,8 @@ function myFunction() {
 </ul>
 <hr/>
 
-<h1><a
+
+<h1 xmlns=""><a
 name="Independence">Independence</a></h1>
 
 <h2><a
@@ -238,7 +244,7 @@ $P(A)=P(B)=\frac 12$  and $P(A\cap B)=\frac 14.$  So we have independence.
 <b>EXERCISE 2:</b>&nbsp;
 Same problem as above, but this time the coin is biased. Say, $P(H)=0.6.$  
 <p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
 class="ans" id="lab1">
 Possible outcomes are still $HH, HT, TH$  and $TT.$  Let's work out the probabilities. 
 <p></p>
@@ -503,7 +509,7 @@ name="Problems for practice">Problems for practice</a></h1>
 </center>
 
 <p><a
-href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
 class="ans" id="lab2">
 Let $f = P($Elmer beats father$),$ and $c =
 P($Elmer beats champion$).$ Then Elmer's chance of
@@ -537,7 +543,7 @@ So $A-B &lt; 0.$ Hence Elmer should play champion-father-champion.
 </center>
 
 <p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
 class="ans" id="lab3">
 Let $A,B$ and $C$, respecively, be the probabilities
 that the first, second and third man in the three man jury  
@@ -569,7 +575,7 @@ So both the jury are equally likely to reach the correct decision.
 </center>
 
 <p><a
-href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
 class="ans" id="lab4">
 $2^{-100}{100 \choose 50}\approx 0.08.$
 </div></p>
@@ -593,32 +599,8 @@ $2^{-100}{100 \choose 50}\approx 0.08.$
 
 <p></p>
 
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
-var disqus_config = function () {
-this.page.url = "https://arnabc74.github.io/prob1_2024/indep.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "indep"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
-
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
