--- a/prob1_2025/notes.html
+++ b/prob1_2025/notes.html
@@ -106,8 +106,13 @@ body,table {
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -143,8 +148,8 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
+<h3/>
 <ul>
 <li>
 <a href="#Class notes">Class notes</a>
@@ -152,98 +157,17 @@ function myFunction() {
 </ul>
 <hr/>
 
-<p></p>
+
+<p xmlns=""></p>
 
 <h1><a
 name="Class notes">Class notes</a></h1>
-Before midsem:
-<ul>
 
-<li>
-<a href="elem.html">Motivation</a>
-</li>
-
-<li>
-<a href="basic.html">Basic definitions</a>
-</li>
-
-<li>
-<a href="fluc.html">Random walk</a>
-</li>
-
-<li>
-<a href="indep.html">Independence</a>
-</li>
-
-<li>
-<a href="vit.html">First taste of measure theory</a> (important, but not in syllabus)</li>
-
-<li>
-<a href="bayes.html">Conditional probability</a>
-</li>
-
-</ul>
-After midsem:
-<ul>
-
-<li>
-<a href="rv.html">Random variables</a>
-</li>
-
-<li>
-<a href="rv2.html">Random variables (contd)</a>
-</li>
-
-<li>
-<a href="joint.html">Joint distribution</a>
-</li>
-
-<li>
-<a href="condl.html">Conditional distribution</a>
-</li>
-
-<li>Standard discrete distributions:
-<ul>
-
-<li>
-<a href="distrib1.html">Finite support</a>
-</li>
-
-<li>
-<a href="distrib2.html">Infinite support</a>
-</li>
-</ul>
-</li>
-
-</ul>
+<p></p>
 
 <a href="index.html">Back to class webpage</a>
 
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-this.page.url = "https://arnabc74.github.io/prob1_2024/notes.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "notes"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
