--- a/prob1_2025/rv2.html
+++ b/prob1_2025/rv2.html
@@ -106,8 +106,13 @@ body,table {
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -143,12 +148,9 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
+<h3/>
 <ul>
-<li>
-<a href="#Finite existence of $E(X)$">Finite existence of $E(X)$</a>
-</li>
 <li>
 <a href="#Variance">Variance</a>
 </li>
@@ -164,134 +166,8 @@ function myFunction() {
 </ul>
 <hr/>
 
-<p></p>
 
-<h1><a
-name="Finite existence of $E(X)$">Finite existence of $E(X)$</a></h1>
-We know from the definition of expectation that it may come in four varieties: it may be finite, or $\infty$  or $-\infty$ 
- or undefined. 
-The finite case is the most useful, and it 
-sometimes helps to know some sufficient conditions for this.
-<p></p>
-
-<fieldset>
-<legend><b><i>Theorem</i></b></legend>
-If $X$ is simple, 
-then $E(X)$ must be finite. 
-</fieldset>
-
-<p>
-<b><i>Proof:</i></b>
-Goes without saying!
-<b><i>[QED]</i></b>
-</p>
-
-<p></p>
-Non-negative random variables have the advantage that their expectation is always defined (though may be $\infty$). Now,
- from any random variable $X$  we can easily manufacture a non-negative random variable, viz, $|X|.$  It is 
-good to be able to relate $E(X)$  with $E(|X|).$
-<p></p>
-
-<fieldset>
-<legend><b><i>Theorem</i></b></legend>
-$E(|X|)$  is finite if and only if $E(X)$  is finite. 
-</fieldset> 
-
-<p>
-<b><i>Proof:</i></b>
-We define $X_+, X_-$  as usual. 
-<p></p>
-Then $X = X_+-X_-$  and $|X| = X_++X_-$. 
-<p></p>
-Then finiteness of $E(|X|)$  is equivalent to finiteness of both  $E(X_+), E(X_-).$  
-<p></p>
-Again, finiteness of $E(X)$  is equivalent to finiteness of both  $E(X_+), E(X_-).$  
-<p></p>
-Hence the result.
-<b><i>[QED]</i></b>
-</p>
-
-<p></p>
-::<p>
-<b>EXERCISE 1:</b>&nbsp;If $E(|X|)=\infty,$  then what can you say about $E(X)?$
-<p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
-class="ans" id="lab1">May be $\infty$  or $-\infty$  or undefined.</div></p>
-
-</p>
-
-<fieldset>
-<legend><b><i>Theorem</i></b></legend>
-Let $X,Y$ be random variables defined on the same probability space. Let $|X|\leq|Y|.$
-  If $E(Y)$  is finite, then $E(X)$  must also be finite. 
-</fieldset>
-
-<p>
-<b><i>Proof:</i></b>
-Since $E(Y)$  is finite, hence  $E(|Y|)$  is finite. So $E(|X|)\leq E(|Y|)$ 
- is also finite. Hence $E(X)$  is finite. 
-<b><i>[QED]</i></b>
-</p>
-
-<p></p>
-
-<fieldset>
-<legend><b><i>Theorem</i></b></legend>
-Let $X,Y$  be random variables defined on the same probability space. Let $E(X)$  and $E(Y)$  both be finite.
- Then $E(\max\{X,Y\})$  must also be finite.
-</fieldset>
-
-<p>
-<b><i>Proof:</i></b>
- Do it yourself.
-<b><i>[QED]</i></b>
-</p>
-
-<p></p>
-
-<fieldset>
-<legend><b><i>Theorem</i></b></legend>
-Let $m&lt;n$ be any two positive integers. If $E(X^n)$
-exists finitely, then $E(X^m)$ must also exist finitely.
-</fieldset>
-
-<p>
-<b><i>Proof:</i></b>
-Use the fact that $|X^m| \leq \max\{1,|X^n|\}.$ Now use the
-last theorem.
-<b><i>[QED]</i></b>
-</p>
-
-<p></p>
-The following theorem often proves very useful. 
-<p></p>
-
-<fieldset>
-<legend><b><i>Markov inequality</i></b></legend>
-Let $X$  be any non-negative random variable. Let $\epsilon&gt;0.$  Then 
-$$E(X)\geq \epsilon P(X\geq\epsilon).$$
-</fieldset>
-
-<p>
-<b><i>Proof:</i></b>
-
-<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/exeps.png"></th>
-</tr>
-<tr>
-<th>Look at this diagram and see if you can prove the theorem.</th>
-</tr>
-</table>
-</center>
-
-<p></p>
-
-<b><i>[QED]</i></b>
-</p>
-
-<p></p>
+<p xmlns=""></p>
 
 <h1><a
 name="Variance">Variance</a></h1>
@@ -546,13 +422,13 @@ name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;A box has 6 red balls an 4 black balls. An SRSWR of
+<b>EXERCISE 1:</b>&nbsp;A box has 6 red balls an 4 black balls. An SRSWR of
 size $n$ is selected. If $X$ is the number of red
 balls selected, then find PMF of $X$  and $E(X).$ Also solve the
 problem in the case of SRSWOR.
 <p><a
-href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
-class="ans" id="lab2">
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
+class="ans" id="lab1">
 <u>For SRSWR:</u>  $P(X=x) = \binom{n}{x} \left(\frac{6}{10}\right)^x\left(\frac{4}{10}\right)^{n-x}$  for $x=0,1,...,n.$
 <p></p>
 
@@ -566,14 +442,14 @@ By the way, this does not mean that $X$  can indeed take all the values from 0 t
 
 </p>
 ::<p>
-<b>EXERCISE 3:</b>&nbsp;Let $N$ be a positive integer. Let 
+<b>EXERCISE 2:</b>&nbsp;Let $N$ be a positive integer. Let 
 $$
 f(x) = \left\{\begin{array}{ll}c 2^x &\text{if }x=1,2,...,N\\0&\text{otherwise.}\end{array}\right.
 $$
 be a PMF. Find $c.$ Find $E(X)$ and $V(X)$ if $X$ has this PMF.
 <p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
-class="ans" id="lab3">
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
+class="ans" id="lab2">
 For $f(x)$  to be a PMF we need 
 $$f(1)+\cdots+f(N)=1.$$
 Hence 
@@ -584,12 +460,12 @@ Similarly, you can find $V(X).$
 </div></p>
 </p>
 ::<p>
-<b>EXERCISE 4:</b>&nbsp;An SRSWR of size 2 is drawn from $\{1,2,...,12\}.$
+<b>EXERCISE 3:</b>&nbsp;An SRSWR of size 2 is drawn from $\{1,2,...,12\}.$
 Let $X$ be the maximum of the two numbers
 selected. Find $E(X).$
 <p><a
-href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
-class="ans" id="lab4">
+href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
+class="ans" id="lab3">
 Here $X$  can take only the values $1,2,...,12.$  
 <p></p>
 For $k\in\{1,2,...,12\}$  we have
@@ -601,13 +477,13 @@ Hence $E(X) = \sum_1^{12} \frac{2k^2-k}{144}=....$
 
 </p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;An SRSWR of size $n$ is selected
+<b>EXERCISE 4:</b>&nbsp;An SRSWR of size $n$ is selected
 from $\{1,2,...,12\}.$ Let $a_n $ be the expected
 value of the maximum of the sample. Show that $a_n \leq
 a_{n+1}$ without explicily finding $a_n$ in terms of $n.$
 <p><a
-href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
-class="ans" id="lab5">
+href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
+class="ans" id="lab4">
 Let $X_1,...,X_{n+1}$  be an SRSWR of size $n+1$  from $\{1,...,12\}.$
 <p></p>
 Then $X_1,...,X_n$  is an SRSWR of size $n$  from $\{1,...,12\}.$
@@ -623,7 +499,7 @@ Hence $a_{n+1}\geq a_n,$  as required.
 
 </p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;<center>
+<b>EXERCISE 5:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossexp1.png"></th>
@@ -635,8 +511,8 @@ Hence $a_{n+1}\geq a_n,$  as required.
 </center>
 
 <p><a
-href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
-class="ans" id="lab6">
+href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
+class="ans" id="lab5">
 $P(0\leq X\leq 40) = 1-P(|X-\mu|&gt;20)$  where $\mu=E(X)=20.$
 <p></p>
 By Chebyshev inequality $P(|X-\mu|&gt; 20)\leq \frac{V(X)}{400} = \frac{1}{20}.$
@@ -646,7 +522,7 @@ Hence $P(0\leq X\leq 40)\geq 1-\frac{1}{20} = \frac{19}{20}.$
 
 </p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;<center>
+<b>EXERCISE 6:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossexp2.png"></th>
@@ -658,8 +534,8 @@ Hence $P(0\leq X\leq 40)\geq 1-\frac{1}{20} = \frac{19}{20}.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
-class="ans" id="lab7">
+href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
+class="ans" id="lab6">
 (a) By Markov inequality, $E(X)\geq 85 P(X&gt; 85).$  
 <p></p>
 So $P(X&gt; 85) \leq \frac{75}{85}.$
@@ -678,7 +554,7 @@ So we need $1-\frac 1n \geq 0.9$  or $n\geq 10.$
 
 </p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;<center>
+<b>EXERCISE 7:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/rossexp3.png"></th>
@@ -690,8 +566,8 @@ So we need $1-\frac 1n \geq 0.9$  or $n\geq 10.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
-class="ans" id="lab8">
+href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
+class="ans" id="lab7">
 Here $P(X\leq x) = F_X(x) = F_Y\left(\frac{x-a}{b}\right) = P\left(Y\leq \frac{x-a}{b}\right) = P(a+bY\leq x).$
 <p></p>
 Since this holds for all $x\in{\mathbb R},$  hence $X$  and $a+bY$  have the same CDF.
@@ -705,7 +581,7 @@ Since $CDF$  is unique for a distribution, hence $X$  and $a+bY$  have the same 
 
 </p>
 
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
