--- a/prob1_2025/vit.html
+++ b/prob1_2025/vit.html
@@ -148,7 +148,7 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3/>
 <ul>
 <li>
@@ -166,8 +166,8 @@ function myFunction() {
 <li>
 <a href="#Some terminology from measure theory">Some terminology from measure theory</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#A little measure theory again">A little measure theory again</a>
+<li>
+<a href="#Measure theoretic definition of a random variable">Measure theoretic definition of a random variable</a>
 </li>
 <li>
 <a href="#Expectation">Expectation</a>
@@ -506,8 +506,8 @@ $\mu(\phi)=0$
 Corrected a typo pointed out by Vrajishnu.
 <p></p>
 As you may easily see, "length", "area", "mass", "volume", "cardinality" (for finite sets) are all examples of measures.
-<h3><a
-name="A little measure theory again">A little measure theory again</a></h3>
+<h1><a
+name="Measure theoretic definition of a random variable">Measure theoretic definition of a random variable</a></h1>
 Earlier we had
 talked about "good" sets and "bad" sets. The "good" sets constitute a $\sigma$-algebra. 
 <p></p>
