--- a/prob1_2025/bayes.html
+++ b/prob1_2025/bayes.html
@@ -106,8 +106,13 @@ body,table {
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -143,8 +148,8 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
+<h3/>
 <ul>
 <li>
 <a href="#Conditional Probability">Conditional Probability</a>
@@ -192,7 +197,7 @@ function myFunction() {
 <hr/>
 
 $\newcommand{\ev}{{\mathcal F}}$
-<h1><a
+<h1 xmlns=""><a
 name="Conditional Probability">Conditional Probability</a></h1>
 
 <p></p>
@@ -1018,7 +1023,7 @@ name="Problems for practice">Problems for practice</a></h1>
 <b>EXERCISE 5:</b>&nbsp;Is it true that $P(A|B)+P(A^c|B)=1?$  Is it true
 that $P(A|B)+P(A|B^c)=1?$
 <p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
 class="ans" id="lab1">Yes. Not necessarily.</div></p>
 
 </p>
@@ -1026,7 +1031,7 @@ class="ans" id="lab1">Yes. Not necessarily.</div></p>
 <b>EXERCISE 6:</b>&nbsp;"It is possible to have events $A,B$ such that $P(A|B)=1$
 but $P(B|A)\neq 1$" Disprove or provide an example.
 <p><a
-href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
 class="ans" id="lab2">Take $B\subseteq A$ with $P(A\setminus B)&gt;0.$</div></p>
 
 </p>
@@ -1037,7 +1042,7 @@ class="ans" id="lab2">Take $B\subseteq A$ with $P(A\setminus B)&gt;0.$</div></p>
 but $P(B|A) &lt; 0.01$" Disprove or provide an example to
 this statement.
 <p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
 class="ans" id="lab3">$B=\{1\}$, $A = \{1,...,1000\}.$ The random
 experiment is to draw one element of $A$ with equal probabilities. </div></p>
 
@@ -1057,7 +1062,7 @@ v_2 u_{2n-2} + \cdots + v_{2n} u_0 = u_{2n}.
 $$
 [Corrected an error pointed out by Krishnam Baregama.]
 <p><a
-href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
 class="ans" id="lab4">Condition on the first time the path returns to zero, and then use the theorem of total probability.</div></p>
 
 </p>
@@ -1067,7 +1072,7 @@ class="ans" id="lab4">Condition on the first time the path returns to zero, and 
 <b>EXERCISE 9:</b>&nbsp;$P(A\cap B)&gt;0.$ Show that $P(A|B) = P(B|A)$ if and
 only if $P(A)=P(B).$
 <p><a
-href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
 class="ans" id="lab5">Easy</div></p>
 
 </p>
@@ -1084,7 +1089,7 @@ uncorrupted?
 <p></p>
 
 <p><a
-href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
 class="ans" id="lab6">$\frac{0.6\times0.95}{0.6\times0.95+0.4\times0.01}.$</div></p>
 
 </p>
@@ -1096,7 +1101,7 @@ wrong, the patient dies with probability 50%. Even for a correct diagnosis
 the patient dies in 10% cases. Given that a patient has died find the
 conditional probability that the diagnosis was correct.
 <p><a
-href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
 class="ans" id="lab7">$\frac{0.9\times0.1}{0.9\times0.1+0.1\times0.5}.$</div></p>
 
 </p>
@@ -1107,7 +1112,7 @@ class="ans" id="lab7">$\frac{0.9\times0.1}{0.9\times0.1+0.1\times0.5}.$</div></p
 that at least one shows a 6 given that the dice show different
 numbers?
 <p><a
-href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab8')"><b>[Hint]</b></a><div
 class="ans" id="lab8">Let $A=${the dice show difference numbers},
 and $B=${at least one show a 6}. 
 <p></p>
@@ -1124,7 +1129,7 @@ of the outcomes of the dice is $i?$ Compute for all possible
 values
 of $i.$
 <p><a
-href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
 class="ans" id="lab9">$0$ for $i=2,...,6.$ Then, for $i=7,...,12$
 the conditional probability is $\frac{1}{13-i}.$</div></p>
 
@@ -1152,7 +1157,7 @@ whenever $j-i\in\{1,...,6\}$ and 0 else. Show that the probability that the coun
 arrives at 14 (starting from 1) in exactly 3 moves equals
 the $(1,14)$-th entry of $T^3.$
 <p><a
-href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
 class="ans" id="lab10">$p_4p_6 + p_5p_5+p_6p_4.$</div></p>
 
 </p>
@@ -1184,7 +1189,7 @@ exactly $k$ moves is the $(i,j)$-th entry of the matrix $A^k.$
 <p></p>
 
 <p><a
-href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
 class="ans" id="lab11">Use induction on $k$. Let $b_{ij}$  be the probability that we move from $i$ 
  to $j$  in exactly $k-1$  steps. Then the theorem of total probability implies that the
  probability of moving from $i$  to $j$  in exactly $k$  steps is 
@@ -1209,7 +1214,7 @@ size $n$ is drawn. All the $n$ balls are found to be
 red. One more ball is drawn from the same urn. Find  the
 conditional probability that this ball is also red.
 <p><a
-href="javascript:hideShow('lab12')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
 class="ans" id="lab12">$\frac{1^{n+1} + 2^{n+1} +\cdots + N^{n+1}}{N(1^n + 2^n +\cdots + N^n)}.$
 </div></p>
 
@@ -1229,7 +1234,7 @@ class="ans" id="lab12">$\frac{1^{n+1} + 2^{n+1} +\cdots + N^{n+1}}{N(1^n + 2^n +
 </center>
 
 <p><a
-href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
 class="ans" id="lab13">$\frac{6\times5\times9\times8}{15\times14\times13\times12}.$  </div></p>
 
 </p>
@@ -1246,7 +1251,7 @@ class="ans" id="lab13">$\frac{6\times5\times9\times8}{15\times14\times13\times12
 </center>
 
 <p><a
-href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
 class="ans" id="lab14">
 WOR: $P($ exactly 3 white$)=\frac{4\times4\times8\times7\times6}{12\times11\times10\times9}.$
 <p></p>
@@ -1275,7 +1280,7 @@ So the required conditional probability is again $\frac 12.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab15')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
 class="ans" id="lab15">Model this as: toss a fair coin twice. Given that at least one is a head, what is the
  conditional probability that the other is a tail? 
 <p></p>
@@ -1297,7 +1302,7 @@ $
 </center>
 
 <p><a
-href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab16')"><b>[Hint]</b></a><div
 class="ans" id="lab16">$\frac 12.$</div></p>
 
 </p>
@@ -1314,7 +1319,7 @@ class="ans" id="lab16">$\frac 12.$</div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab17')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
 class="ans" id="lab17">$P($ exactly 2 white$)=\frac 13\times\frac 23\times\frac 34+\frac 13\times\frac 13\times\frac 14+
 \frac 23\times\frac 23\times\frac 14=\frac{11}{36}$
 <p></p>
@@ -1337,7 +1342,7 @@ So the required conditional probability is $\frac{7}{11}.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab18')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab18')"><b>[Hint]</b></a><div
 class="ans" id="lab18">$P($ 2nd and 3rd cards spades$)=\frac{13\times12}{52\times51}.$
 <p></p>
 $P($ All three spades$)=\frac{13\times12\times11}{52\times51\times50}.$
@@ -1359,7 +1364,7 @@ Hence the required probability is $\frac{11}{50}.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab19')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab19')"><b>[Hint]</b></a><div
 class="ans" id="lab19">
 Let $A=$  event that a randomly selected woman has ectopic pregnancy.
 <p></p>
@@ -1386,7 +1391,7 @@ Notice that $b&gt;0$  cancels out.
 </center>
 
 <p><a
-href="javascript:hideShow('lab20')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
 class="ans" id="lab20">
 <center>
 <table width="100%">
@@ -1415,7 +1420,7 @@ $0.85p+0.15\times0.96 = 0.98.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab21')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab21')"><b>[Hint]</b></a><div
 class="ans" id="lab21">(a) $0.36\times0.22.$
 <p></p>
 (b) $\frac{0.36\times0.22}{0.36\times0.22+0.30}.$
@@ -1435,7 +1440,7 @@ class="ans" id="lab21">(a) $0.36\times0.22.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab22')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab22')"><b>[Hint]</b></a><div
 class="ans" id="lab22">
 (a) $\frac{0.46\times0.35}{0.46\times0.35+0.3\times0.62+0.24\times0.58}.$
 <p></p>
@@ -1460,7 +1465,7 @@ class="ans" id="lab22">
 </center>
 
 <p><a
-href="javascript:hideShow('lab23')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab23')"><b>[Hint]</b></a><div
 class="ans" id="lab23">(a) $\frac 25.$  (b) $\frac{2}{52}.$</div></p>
 
 </p>
@@ -1477,7 +1482,7 @@ class="ans" id="lab23">(a) $\frac 25.$  (b) $\frac{2}{52}.$</div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab24')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab24')"><b>[Hint]</b></a><div
 class="ans" id="lab24">Can be done directly by counting. Or stepwise using conditional probability. The event is
  "Each of the fours hands has exactly one ace". 
 <p></p>
@@ -1528,7 +1533,7 @@ Similarly for the other two conditional probabilities. The last conditional prob
 </center>
 
 <p><a
-href="javascript:hideShow('lab25')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab25')"><b>[Hint]</b></a><div
 class="ans" id="lab25">Let $B_i=$ the event that $i$-th draw gives black. Similarly for $W_i.$  Then
  in (a) we want $P(B_1B_2W_3W_4)=P(B_1)P(B_2|B_1)P(W_3|B_1B_2)P(W_4|B_1B_2W_3).$
 <p></p>
@@ -1552,7 +1557,7 @@ In (b) the black balls could occur in ${4 \choose 2} = 6$ ways among the 4 draws
 </center>
 
 <p><a
-href="javascript:hideShow('lab26')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab26')"><b>[Hint]</b></a><div
 class="ans" id="lab26">
 (a) <center>
 <table width="100%">
@@ -1583,7 +1588,7 @@ class="ans" id="lab26">
 </center>
 
 <p><a
-href="javascript:hideShow('lab27')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab27')"><b>[Hint]</b></a><div
 class="ans" id="lab27">The first is more likely to give an over estimate, since employees in larger car pools are
  more likely to be selected. The second is better.</div></p>
 
@@ -1601,7 +1606,7 @@ class="ans" id="lab27">The first is more likely to give an over estimate, since 
 </center>
 
 <p><a
-href="javascript:hideShow('lab28')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab28')"><b>[Hint]</b></a><div
 class="ans" id="lab28">Let $\Omega=$ all the ways the deck may be ordered. Then $|\Omega|=52!$  and we
  assume that all these are equally likely.  
 <p></p>
@@ -1636,7 +1641,7 @@ $|A\cap C| = 1\times 4\times 48\times\cdots\times(48-19+1).$
 </center>
 
 <p><a
-href="javascript:hideShow('lab29')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab29')"><b>[Hint]</b></a><div
 class="ans" id="lab29"><center>
 <table width="100%">
 <tr>
@@ -1662,7 +1667,7 @@ class="ans" id="lab29"><center>
 </center>
 
 <p><a
-href="javascript:hideShow('lab30')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab30')"><b>[Hint]</b></a><div
 class="ans" id="lab30"></div></p>
 
 </p>
@@ -1679,7 +1684,7 @@ class="ans" id="lab30"></div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab31')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab31')"><b>[Hint]</b></a><div
 class="ans" id="lab31"></div></p>
 
 </p>
@@ -1696,7 +1701,7 @@ class="ans" id="lab31"></div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab32')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab32')"><b>[Hint]</b></a><div
 class="ans" id="lab32"></div></p>
 
 </p>
@@ -1713,7 +1718,7 @@ class="ans" id="lab32"></div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab33')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab33')"><b>[Hint]</b></a><div
 class="ans" id="lab33"></div></p>
 
 </p>
@@ -1730,7 +1735,7 @@ class="ans" id="lab33"></div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab34')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab34')"><b>[Hint]</b></a><div
 class="ans" id="lab34"></div></p>
 
 </p>
@@ -1747,7 +1752,7 @@ class="ans" id="lab34"></div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab35')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab35')"><b>[Hint]</b></a><div
 class="ans" id="lab35"></div></p>
 
 </p>
@@ -1764,7 +1769,7 @@ class="ans" id="lab35"></div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab36')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab36')"><b>[Hint]</b></a><div
 class="ans" id="lab36"></div></p>
 
 </p>
@@ -1781,7 +1786,7 @@ class="ans" id="lab36"></div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab37')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab37')"><b>[Hint]</b></a><div
 class="ans" id="lab37"></div></p>
 
 </p>
@@ -1798,7 +1803,7 @@ class="ans" id="lab37"></div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab38')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab38')"><b>[Hint]</b></a><div
 class="ans" id="lab38">$\frac{5}{1+2+\cdots+10}.$</div></p>
 
 </p>
@@ -1815,7 +1820,7 @@ class="ans" id="lab38">$\frac{5}{1+2+\cdots+10}.$</div></p>
 </center>
 
 <p><a
-href="javascript:hideShow('lab39')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab39')"><b>[Hint]</b></a><div
 class="ans" id="lab39">
 Let $A$  be any sequence of distinct  cards
  other than the ace of spades.  Then by a strategy we mean any subset $B\subseteq A$ such that no
@@ -1844,7 +1849,7 @@ Another technique (possibly an easier one) is to consider the deck as made of on
 </center>
 
 <p><a
-href="javascript:hideShow('lab40')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab40')"><b>[Hint]</b></a><div
 class="ans" id="lab40">9.</div></p>
 
 </p>
@@ -1863,7 +1868,7 @@ In other words, we have a random experiment that can output $1,2,...,m$  with pr
  $p_1,...,p_m.$  The experiment is run $n$  times. What is the chance that the last
  outcome is different from all the earlier ones? 
 <p><a
-href="javascript:hideShow('lab41')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab41')"><b>[Hint]</b></a><div
 class="ans" id="lab41">
 Let $A$  be this event. Let $B_i$  be the event that the last coupon is of type $i.$  
 <p></p>
@@ -1891,7 +1896,7 @@ Hence $P(A) = \sum_{i=1}^m p_i (1-p_i)^{n-1}.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab42')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab42')"><b>[Hint]</b></a><div
 class="ans" id="lab42">
 (a) $2p(1-p).$
 <p></p>
@@ -1925,7 +1930,7 @@ class="ans" id="lab42">
 </center>
 
 <p><a
-href="javascript:hideShow('lab43')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab43')"><b>[Hint]</b></a><div
 class="ans" id="lab43">
 (a) The procedure may be modelled by this random experiment: toss the coin
 twice, report "Head" if the outcome is HT, report "Tail" if the outcome is TH, and report
@@ -1961,7 +1966,7 @@ which may not equal $\frac 12.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab44')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab44')"><b>[Hint]</b></a><div
 class="ans" id="lab44">You may either list all the paths and then compute the
 probability of their union using inclusion-exclusion, or you may
 you conditional probability. In the latter approach, you take
@@ -1983,7 +1988,7 @@ when it is off. This approach is better for complicated circuits.
 </center>
 
 <p><a
-href="javascript:hideShow('lab45')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab45')"><b>[Hint]</b></a><div
 class="ans" id="lab45">
 $A_i=$ {first throw shows $i$ } for $i=2,3,...,12.$
 <p></p>
@@ -2010,7 +2015,7 @@ For any other $i$  we have $P(win|A_i) = p_i + (1-p_i-p_7)p_i + (1-p_i-p_7)^2p_i
 </center>
 
 <p><a
-href="javascript:hideShow('lab46')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab46')"><b>[Hint]</b></a><div
 class="ans" id="lab46">Don't replace.</div></p>
 
 </p>
@@ -2022,7 +2027,7 @@ again and again. What is the probability that at the $n$-th
 stage the ball drawn will be red? Does the probability depend
 on $n?$
 <p><a
-href="javascript:hideShow('lab47')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab47')"><b>[Hint]</b></a><div
 class="ans" id="lab47">
 Let $X_n$ be the colour of the $n$-th ball drawn. Then 
 $
@@ -2053,38 +2058,14 @@ numbers $m &lt; n.$ What is the probability that the ball
 drawn at stage $m$ is green and the ball drawn at
 stage $n$ is red? Does the answer depend on $m$ and $n$?
 <p><a
-href="javascript:hideShow('lab48')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab48')"><b>[Hint]</b></a><div
 class="ans" id="lab48">Proceed just as in the last problem.</div></p>
 
 </p>
 
 <p></p>
 
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-this.page.url = "https://arnabc74.github.io/prob1_2024/bayes.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "bayes"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
