--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -106,8 +106,13 @@ body,table {
 }
 
 .box {
-  border: 2px solid black;
+  background-color: yellow; 
+  //border: 2px solid black;
   display: inline-block;
+}
+
+.hl {
+  list-style-type: upper-alpha;
 }
 </style>
 <script>
@@ -143,8 +148,8 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
-<h3>Table of contents</h3>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
+<h3/>
 <ul>
 <li>
 <a href="#Random walks">Random walks</a>
@@ -182,7 +187,8 @@ function myFunction() {
 </ul>
 <hr/>
 
-<h1><a
+
+<h1 xmlns=""><a
 name="Random walks">Random walks</a></h1>
 The material here is taken from chapter 3 of Feller, Volume
 1.
@@ -463,12 +469,13 @@ Clearly, $k \leq n-2.$ (Why is $k\neq n$? Why is $k\neq n-1$?)
 <p></p>
 
 <div class="box">Check</div>Then $p(t)=L.$
-<blockquote class="scrpt">
-<b>Because:</b>
+<blockquote><a
+href="javascript:hideShow('reason1')"><b>[Because...]</b></a><div
+class="ans" id="reason1">
 We cannot have $p(t)&lt; L$, since $t &gt; \max(M).$
 <p></p>
 Also since $p(k) &lt; L,$ hence $p(t)=p(k+1)&lt; L+1.$
-</blockquote>
+</div></blockquote>
 
 <b><i>[QED]</i></b>
 </p>
@@ -1181,7 +1188,7 @@ $$
 \frac{p-q}{p+q}.
 $$
 <p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
 class="ans" id="lab1">
 Let $y_i$ be the lead of $A$ over $B$
 after $i$ ballot papers have been counted. If we
@@ -1224,7 +1231,7 @@ So the required probability is $\frac{p-q}{p+q},$ as required.
 </center>
 
 <p><a
-href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
 class="ans" id="lab2">This is just the complement of the last problem. So the answer is $1-\frac{a-b}{a+b}=\frac{2b}{a+b}.$</div></p>
 
 </p>
@@ -1234,7 +1241,7 @@ class="ans" id="lab2">This is just the complement of the last problem. So the an
 <p>
 <b>EXERCISE 6:</b>&nbsp;Let $a,b&gt;0.$ Show that the number of paths from $(0,0)$ to $(n,a)$ that are
 always $&gt;-b$ is $N_{n,a}-N_{n,a+2b}.$ <p><a
-href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
 class="ans" id="lab3">
 #{paths from $(0,0)$ to $(n,a)$ that are always $&gt;-b$}<br>
 =#{paths from $(0,0)$ to $(n,a)$}-#{paths from $(0,0)$ to $(n,-a-2b)$} by reflection principle<br>
@@ -1251,7 +1258,7 @@ class="ans" id="lab3">
 from $(0,0)$ to $(n,a)$ that are
 always $&lt;b$ is $N_{n,a}-N_{n,2b-a}.$
 <p><a
-href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
 class="ans" id="lab4">
 #{paths from $(0,0)$ to $(n,a)$ that are always $&lt;b$}<br>
 =#{paths from $(0,0)$ to $(n,a)$}-#{paths from $(0,0)$ to $(n,2b-a)$} by reflection principle<br>
@@ -1266,7 +1273,7 @@ class="ans" id="lab4">
   that attain height $a$  and <i>then</i>  attain height $-b$  before finishing at $(n,c),$  is $N_{n,2a+2b+c}.$ 
  The paths may have also attained height $-b$  before attaining height  $a.$
 <p><a
-href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
 class="ans" id="lab5">
 <center>
 <table width="100%">
@@ -1289,7 +1296,7 @@ without having touched the horizontal line at height $-b$ is
 $N_{n,2a-c}-N_{n,2a+2b+c}.$ (Note that the path may touch
 the horizontal line at height $-b$ <i>before</i> hitting
 the line at height $a.$)<p><a
-href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
 class="ans" id="lab6">
 Let $A = $ {paths from $(0,0)$ which hit the
 horizontal line at height $a$ and then lead to $(n,c)$ }.
@@ -1317,7 +1324,7 @@ Hence the result.
 to $(2n+2,0)$ with all interior vertices $&gt;0$ as there
 are paths from (0,0) to $(2n,0)$ where all interior
 vertices are $\geq 0.$<p><a
-href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
 class="ans" id="lab7">
 Any path from (0,0)
 to $(2n+2,0)$ with all interior vertices $&gt;0$ must
@@ -1342,7 +1349,7 @@ exactly $r$ returns to the origin equals the probability
 that a return occurs at time $2n$  preceded by at
 least $r$ returns.
 <p><a
-href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab8')"><b>[Hint]</b></a><div
 class="ans" id="lab8">False. Consider $r=1$  and $n=2.$  Then the first probability is $\frac 12.$ 
  But the second probability is $\frac 14.$</div></p>
 
@@ -1363,7 +1370,7 @@ $B = $ the path passes through $(2n,2k).$
 </blockquote>
 Show that $P(A) = P(B).$  Is this true if $k\leq 0?$  Is it true if $k&gt;n?$
 <p><a
-href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
 class="ans" id="lab9">
 For $k\in\{1,...,n\},$  the result follows directly from reflection principle. The result fails if $k\leq 0.$ 
  One counterexample, if when $k=-10$  and $n=1.$  The result holds if $k&gt;n,$  because then $P(A)=P(B)=0.$
@@ -1391,7 +1398,7 @@ continued for two more time units without hitting
 <p></p>
 Hence $|A|=|B|.$ 
 <p><a
-href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
 class="ans" id="lab10">The "$|B|\leq |A|$ " argument is wrong. What it says is: number of paths <i>of length 8</i>
  that never return to 0 is $\leq |A|$ ".</div></p> 
 </p>
@@ -1411,7 +1418,7 @@ class="ans" id="lab10">The "$|B|\leq |A|$ " argument is wrong. What it says is: 
 </center>
 
 <p><a
-href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
 class="ans" id="lab11">
 Let the total number of balls in either box be $k.$  Let there be $w_i$  white balls in box $i.$  Then the
  given condition says 
@@ -1426,32 +1433,8 @@ So either $w_1 = 0$  or $w_2 = 0$  or $k-w_2 = 0.$  Here $w_1$  cannot be zero, 
 
 </p>
 
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
-var disqus_config = function () {
-this.page.url = "https://arnabc74.github.io/prob1_2024/fluc.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "fluc"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
-
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
