--- a/prob1_2025/survival.html
+++ b/prob1_2025/survival.html
@@ -148,7 +148,7 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3/>
 <ul>
 <li>
@@ -364,30 +364,7 @@ Socio-economic barrier is a big barrier, and so do not expect much help from you
  speak fluent Hindi. They generally understand the special needs of students from rural background.  
 <p></p>
 
-<h3>Comments</h3>
-To post an anonymous comment, click on the "Name" field. This
-will bring up an option saying "I'd rather post as a guest."
-<p></p><!--
-begin disqus code --> <div id="disqus_thread"></div>
-<script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
-var disqus_config = function () {
-this.page.url = "https://arnabc74.github.io/prob1_2024/survival.html"; // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "survival"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://txtbk.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript><!-- end disqus code --> 
 <p></p>
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
